feat(salas): Adiciona endpoint para listar salas por usuário