@@ -1,6 +1,5 @@
 package com.WellSpace.modules.reservas.services;
 
-
 import com.WellSpace.modules.reservas.DTO.ReservaRequest;
 import com.WellSpace.modules.reservas.DTO.ReservaResponse;
 import com.WellSpace.modules.reservas.domain.Reserva;
@@ -11,9 +10,10 @@ import com.WellSpace.modules.salas.domain.Salas;
 import com.WellSpace.modules.salas.repository.SalasRepository;
 import com.WellSpace.modules.usuario.domain.Usuario;
 import com.WellSpace.modules.usuario.repository.UsuarioRepository;
-import jakarta.transaction.Transactional;
-import lombok.RequiredArgsConstructor;
+import jakarta.persistence.EntityNotFoundException;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional; // IMPORTANTE
+import lombok.RequiredArgsConstructor;
 
 import java.util.List;
 import java.util.UUID;
@@ -28,34 +28,31 @@ public class ReservaService implements ReservaServiceInterface {
     private final UsuarioRepository usuarioRepository;
     private final SalasRepository salasRepository;
 
-    @Transactional
     @Override
+    @Transactional
     public ReservaResponse criarReserva(ReservaRequest request) {
-
         Salas salas = salasRepository.findById(request.salas())
-                .orElseThrow(() -> new RuntimeException("Sala não encontrada"));
-
+                .orElseThrow(() -> new EntityNotFoundException("Sala não encontrada"));
         Usuario locatario = usuarioRepository.findById(request.locatario())
-                .orElseThrow(() -> new RuntimeException("Locatário não encontrado"));
-
+                .orElseThrow(() -> new EntityNotFoundException("Locatário não encontrado"));
         Usuario locador = usuarioRepository.findById(request.locador())
-                .orElseThrow(() -> new RuntimeException("Locador não encontrado"));
-
+                .orElseThrow(() -> new EntityNotFoundException("Locador não encontrado"));
 
         Reserva reserva = reservaMapper.toEntity(request, salas, locatario, locador);
         Reserva savedReserva = reservaRepository.save(reserva);
-
         return reservaMapper.toResponseDTO(savedReserva);
     }
 
     @Override
+    @Transactional(readOnly = true) // ADICIONADO
     public ReservaResponse buscarPorId(UUID id) {
         Reserva reserva = reservaRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Reserva não encontrada"));
+                .orElseThrow(() -> new EntityNotFoundException("Reserva não encontrada"));
         return reservaMapper.toResponseDTO(reserva);
     }
 
     @Override
+    @Transactional(readOnly = true) // ADICIONADO
     public List<ReservaResponse> listarTodas() {
         return reservaRepository.findAll()
                 .stream()
@@ -63,29 +60,33 @@ public class ReservaService implements ReservaServiceInterface {
                 .toList();
     }
 
-    @Transactional
     @Override
+    @Transactional
     public void deletarReserva(UUID id) {
         if (!reservaRepository.existsById(id)) {
-            throw new RuntimeException("Reserva não encontrada para exclusão");
+            throw new EntityNotFoundException("Reserva não encontrada para exclusão");
         }
         reservaRepository.deleteById(id);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<ReservaResponse> buscarPorLocatarioId(UUID locatarioId) {
         usuarioRepository.findById(locatarioId)
-                .orElseThrow(() -> new RuntimeException("Usuário locatário não encontrado"));
+                .orElseThrow(() -> new EntityNotFoundException("Usuário locatário não encontrado"));
 
         List<Reserva> reservas = reservaRepository.findByLocatarioUsuarioId(locatarioId);
 
         return reservas.stream()
                 .map(reservaMapper::toResponseDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
+
     @Override
+    @Transactional(readOnly = true)
     public List<ReservaResponse> listarPorLocadorId(UUID locadorId) {
         List<Reserva> reservas = reservaRepository.findByLocadorUsuarioId(locadorId);
+
         return reservas.stream()
                 .map(reservaMapper::toResponseDTO)
                 .collect(Collectors.toList());
